#128 - Template for RecordType. TreeViewComboBox now detects if it is in Ribbon

--- a/Core.Wpf/Controls/TreeViewComboBox.xaml
+++ b/Core.Wpf/Controls/TreeViewComboBox.xaml
@@ -3,22 +3,32 @@
              xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
              xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006" 
              xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
-             xmlns:converters="clr-namespace:Core.Wpf.Converters"
              mc:Ignorable="d" 
              d:DesignHeight="300" d:DesignWidth="300">
     <Grid>
-        <ComboBox MaxDropDownHeight="0"
-                  x:Name="comboBox"
+        <ContentControl HorizontalAlignment="Stretch"
+                        HorizontalContentAlignment="Stretch"
+                        x:Name="comboBoxPlaceholder">
+            
+        </ContentControl>
+        <!--<ComboBox MaxDropDownHeight="0"
+                  x:Name="comboBoxPlaceholder"
                   DisplayMemberPath="{Binding DisplayMemberPath, RelativeSource={RelativeSource FindAncestor, AncestorType={x:Type UserControl}}}"
                   IsHitTestVisible="{Binding IsOpen, ElementName=popup, Converter={x:Static converters:ReversedBoolConverter.Instance}}"
-                  DropDownOpened="ComboBoxOnDropDownOpened"/>
+                  DropDownOpened="ComboBoxOnDropDownOpened"/>-->
+        <!--<fluent:ComboBox 
+                         IsEditable="False"
+                         DropDownHeight="200"
+                  x:Name="comboBoxPlaceholder"
+                  DisplayMemberPath="{Binding DisplayMemberPath, RelativeSource={RelativeSource FindAncestor, AncestorType={x:Type UserControl}}}"
+                  IsHitTestVisible="{Binding IsOpen, ElementName=popup, Converter={x:Static converters:ReversedBoolConverter.Instance}}"
+                  DropDownOpened="ComboBoxOnDropDownOpened"></fluent:ComboBox>-->
         <Popup StaysOpen="False"
-               PlacementTarget="{x:Reference comboBox}"
                Placement="Bottom"
                MaxHeight="{Binding MaxDropDownHeight, RelativeSource={RelativeSource FindAncestor, AncestorType={x:Type UserControl}}}"
                x:Name="popup">
             <TreeView x:Name="treeView"
-                      MinWidth="{Binding ActualWidth, ElementName=comboBox}"
+                      MinWidth="{Binding ActualWidth, ElementName=comboBoxPlaceholder}"
                       ItemsSource="{Binding ItemsSource, RelativeSource={RelativeSource FindAncestor, AncestorType={x:Type UserControl}}}"
                       ItemTemplate="{Binding ItemTemplate, RelativeSource={RelativeSource FindAncestor, AncestorType={x:Type UserControl}}}"
                       TreeViewItem.Selected="TreeView_OnSelected"
