--- a/ScheduleModule/Views/ScheduleHeaderView.xaml
+++ b/ScheduleModule/Views/ScheduleHeaderView.xaml
@@ -8,16 +8,20 @@
                       xmlns:markupExtensions="clr-namespace:Core.Wpf.MarkupExtensions;assembly=Core.Wpf"
                       xmlns:converters="clr-namespace:Core.Wpf.Converters;assembly=Core.Wpf"
                       xmlns:controls="clr-namespace:Core.Wpf.Controls;assembly=Core.Wpf"
-                      xmlns:data="clr-namespace:Core.Data;assembly=Core.Data"
                       mc:Ignorable="d"
                       d:DesignHeight="300"
                       d:DesignWidth="300"
                       d:DataContext="{d:DesignInstance viewModels:ScheduleHeaderViewModel}">
     <fluent:RibbonTabItem.Resources>
-        <Style TargetType="{x:Type TextBlock}">
-            <Setter Property="Margin"
+        <ResourceDictionary>
+            <ResourceDictionary.MergedDictionaries>
+                <ResourceDictionary Source="pack://application:,,,/Shared.DataTemplates;Component/Core.Data.xaml" />
+            </ResourceDictionary.MergedDictionaries>
+            <Style TargetType="{x:Type TextBlock}">
+                <Setter Property="Margin"
                     Value="0" />
-        </Style>
+            </Style>
+        </ResourceDictionary>
     </fluent:RibbonTabItem.Resources>
     <fluent:RibbonTabItem.Header>
         <TextBlock Text="Расписание"
@@ -60,18 +64,52 @@
                        CommandParameter="{markupExtensions:Int32 7}" />
     </fluent:RibbonGroupBox>
     <fluent:RibbonGroupBox Header="Фильтры">
-        <fluent:ComboBox Header="Тип услуг"
-                         IsEditable="False"
-                         InputWidth="300"
-                         ItemsSource="{Binding ScheduleContentViewModel.RecordTypes}"
-                         SelectedItem="{Binding ScheduleContentViewModel.SelectedRecordType}"
-                         DisplayMemberPath="Name" />
+        <Grid>
+            <Grid.RowDefinitions>
+                <RowDefinition Height="Auto" />
+                <RowDefinition Height="Auto" />
+            </Grid.RowDefinitions>
+            <Grid.ColumnDefinitions>
+                <ColumnDefinition Width="Auto" />
+                <ColumnDefinition Width="Auto" />
+            </Grid.ColumnDefinitions>
+            <TextBlock Grid.Row="0"
+                       Grid.Column="0"
+                       Text="Тип услуг"
+                       Margin="5 0 0 0" />
+            <controls:TreeViewComboBox Grid.Row="0"
+                                       Grid.Column="1"
+                                       ItemsSource="{Binding ScheduleContentViewModel.RecordTypes}"
+                                       SelectedItem="{Binding ScheduleContentViewModel.SelectedRecordType}"
+                                       DisplayMemberPath="Name"
+                                       Width="300" 
+                                       ItemTemplate="{StaticResource AssignableTypesAsHyperlinks}"/>
+            <TextBlock Grid.Row="1"
+                       Grid.Column="0"
+                       Text="Кабинет"
+                       Margin="5 0 0 0" />
+            <fluent:ComboBox Grid.Row="1"
+                             Grid.Column="1"
+                             IsEditable="False"
+                             Width="300"
+                             ItemsSource="{Binding ScheduleContentViewModel.Rooms}"
+                             SelectedItem="{Binding ScheduleContentViewModel.SelectedRoom}"
+                             DisplayMemberPath="NumberAndName" />
+        </Grid>
+        <!--<StackPanel Orientation="Horizontal">
+            <TextBlock Text="Тип услуг"
+                       Margin="5 0 0 0"/>
+            <controls:TreeViewComboBox ItemsSource="{Binding ScheduleContentViewModel.RecordTypes}"
+                                   SelectedItem="{Binding ScheduleContentViewModel.SelectedRecordType}"
+                                   DisplayMemberPath="Name" 
+                                   Width="300" />
+        </StackPanel>
         <fluent:ComboBox Header="Кабинет"
                          IsEditable="False"
-                         InputWidth="300"
+                         InputWidth="292"
                          ItemsSource="{Binding ScheduleContentViewModel.Rooms}"
                          SelectedItem="{Binding ScheduleContentViewModel.SelectedRoom}"
-                         DisplayMemberPath="NumberAndName" />
+                         DisplayMemberPath="NumberAndName" />-->
         <fluent:Button Header="Убрать фильтры"
                        Size="Large"
                        Command="{Binding ScheduleContentViewModel.ClearFiltersCommand, Mode=OneTime}"
