--- a/PatientRecordsModule/Views/Diagnoses/ComplicationsTreeView.xaml
+++ b/PatientRecordsModule/Views/Diagnoses/ComplicationsTreeView.xaml
@@ -1,10 +1,10 @@
-﻿<ResourceDictionary x:Class="PatientRecordsModule.Views.Diagnoses.ComplicationsTreeView"
+﻿<ResourceDictionary x:Class="Shared.PatientRecords.Views.Diagnoses.ComplicationsTreeView"
              xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
              xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
              xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006" 
              xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
              xmlns:xctk="http://schemas.xceed.com/wpf/xaml/toolkit"
-             xmlns:viewModels="clr-namespace:PatientRecordsModule.ViewModels">
+             xmlns:viewModels="clr-namespace:Shared.PatientRecords.ViewModels">
 
     <DataTemplate DataType="{x:Type viewModels:ComplicationsTreeViewModel}">
         <DockPanel LastChildFill="True" MinHeight="500" MaxHeight="500" MinWidth="600" MaxWidth="600"
