--- a/PatientRecordsModule/Views/Diagnoses/DiagnosesView.xaml
+++ b/PatientRecordsModule/Views/Diagnoses/DiagnosesView.xaml
@@ -1,13 +1,13 @@
-﻿<UserControl x:Class="PatientRecordsModule.Views.DiagnosesView"
+﻿<UserControl x:Class="Shared.PatientRecords.Views.DiagnosesView"
              xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
              xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
              xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006" 
              xmlns:d="http://schemas.microsoft.com/expression/blend/2008" 
              xmlns:xctk="http://schemas.xceed.com/wpf/xaml/toolkit"       
              xmlns:converters="clr-namespace:Core.Wpf.Converters;assembly=Core.Wpf"
-             xmlns:viewModels="clr-namespace:PatientRecordsModule.ViewModels"
+             xmlns:viewModels="clr-namespace:Shared.PatientRecords.ViewModels"
              xmlns:fluent="urn:fluent-ribbon"
-             xmlns:local="clr-namespace:PatientRecordsModule.Misc"
+             xmlns:local="clr-namespace:Shared.PatientRecords.Misc"
              mc:Ignorable="d" 
              d:DesignHeight="200" d:DesignWidth="500"
              d:DataContext="{d:DesignInstance viewModels:DiagnosesCollectionViewModel}">
