--- a/PatientRecordsModule/Views/Diagnoses/MKBTreeView.xaml
+++ b/PatientRecordsModule/Views/Diagnoses/MKBTreeView.xaml
@@ -1,10 +1,10 @@
-﻿<ResourceDictionary x:Class="PatientRecordsModule.Views.Diagnoses.MKBTreeView"
+﻿<ResourceDictionary x:Class="Shared.PatientRecords.Views.Diagnoses.MKBTreeView"
              xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
              xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
              xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006" 
              xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
              xmlns:xctk="http://schemas.xceed.com/wpf/xaml/toolkit"
-             xmlns:viewModels="clr-namespace:PatientRecordsModule.ViewModels">
+             xmlns:viewModels="clr-namespace:Shared.PatientRecords.ViewModels">
     
     <DataTemplate DataType="{x:Type viewModels:MKBTreeViewModel}">
         <Grid MinHeight="550" MaxHeight="550" MinWidth="650" MaxWidth="650"
