--- a/PatientRecordsModule/Views/PersonHierarchicalRecordsView.xaml
+++ b/PatientRecordsModule/Views/PersonHierarchicalRecordsView.xaml
@@ -1,6 +1,6 @@
 ﻿<ResourceDictionary xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
                     xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-                    xmlns:viewModels="clr-namespace:PatientRecordsModule.ViewModels">
+                    xmlns:viewModels="clr-namespace:Shared.PatientRecords.ViewModels">
     <BooleanToVisibilityConverter x:Key="BooleanToVisibilityConverter" />
     <HierarchicalDataTemplate DataType="{x:Type viewModels:PersonHierarchicalRecordsViewModel}" ItemsSource="{Binding NestedItems}">
         <Border BorderBrush="Black" BorderThickness="0.5" CornerRadius="4">
