--- a/PatientRecordsModule/Views/PersonRecordListView.xaml
+++ b/PatientRecordsModule/Views/PersonRecordListView.xaml
@@ -1,4 +1,4 @@
-﻿<UserControl x:Class="PatientRecordsModule.Views.PersonRecordListView"
+﻿<UserControl x:Class="Shared.PatientRecords.Views.PersonRecordListView"
              xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
              xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
              xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006" 
@@ -6,7 +6,7 @@
              xmlns:i="http://schemas.microsoft.com/expression/2010/interactivity"
              xmlns:prism="http://www.codeplex.com/prism"
              xmlns:popup="clr-namespace:Core.Wpf.PopupWindowActionAware;assembly=Core.Wpf"
-             xmlns:views="clr-namespace:PatientRecordsModule.Views"
+             xmlns:views="clr-namespace:Shared.PatientRecords.Views"
              mc:Ignorable="d" 
              d:DesignHeight="500" d:DesignWidth="250" Width="250">
     <i:Interaction.Triggers>
