--- a/PatientRecordsModule/Views/PersonRecordsHeader.xaml
+++ b/PatientRecordsModule/Views/PersonRecordsHeader.xaml
@@ -1,10 +1,10 @@
-﻿<fluent:RibbonTabItem x:Class="PatientRecordsModule.Views.PersonRecordsHeader"
+﻿<fluent:RibbonTabItem x:Class="Shared.PatientRecords.Views.PersonRecordsHeader"
                       xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
                       xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
                       xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
                       xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
                       xmlns:fluent="urn:fluent-ribbon"
-                      xmlns:viewModels="clr-namespace:PatientRecordsModule.ViewModels"
+                      xmlns:viewModels="clr-namespace:Shared.PatientRecords.ViewModels"
                       xmlns:converters="clr-namespace:Core.Wpf.Converters;assembly=Core.Wpf"
                       mc:Ignorable="d"
                       d:DesignHeight="300"
