--- a/PatientRecordsModule/Views/PersonRecordsView.xaml
+++ b/PatientRecordsModule/Views/PersonRecordsView.xaml
@@ -1,9 +1,9 @@
-﻿<UserControl x:Class="PatientRecordsModule.Views.PersonRecordsView"
+﻿<UserControl x:Class="Shared.PatientRecords.Views.PersonRecordsView"
              xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
              xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
              xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006" 
              xmlns:d="http://schemas.microsoft.com/expression/blend/2008" 
-             xmlns:views="clr-namespace:PatientRecordsModule.Views"
+             xmlns:views="clr-namespace:Shared.PatientRecords.Views"
              mc:Ignorable="d" 
              d:DesignHeight="300" d:DesignWidth="300">
     <DockPanel LastChildFill="True">
