--- a/PatientRecordsModule/Views/RecordDocuments/RecordDocumentsView.xaml
+++ b/PatientRecordsModule/Views/RecordDocuments/RecordDocumentsView.xaml
@@ -1,11 +1,11 @@
-﻿<UserControl x:Class="PatientRecordsModule.Views.RecordDocumentsView"
+﻿<UserControl x:Class="Shared.PatientRecords.Views.RecordDocumentsView"
              xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
              xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
              xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006" 
              xmlns:d="http://schemas.microsoft.com/expression/blend/2008" 
              xmlns:i="http://schemas.microsoft.com/expression/2010/interactivity"
              xmlns:converters="clr-namespace:Core.Wpf.Converters;assembly=Core.Wpf"
-             xmlns:viewModels="clr-namespace:PatientRecordsModule.ViewModels"
+             xmlns:viewModels="clr-namespace:Shared.PatientRecords.ViewModels"
              xmlns:diag="clr-namespace:System.Diagnostics;assembly=WindowsBase"
              xmlns:prism="http://www.codeplex.com/prism"
              xmlns:popup="clr-namespace:Core.Wpf.PopupWindowActionAware;assembly=Core.Wpf"
