--- a/PatientRecordsModule/Views/VisitCloseView.xaml
+++ b/PatientRecordsModule/Views/VisitCloseView.xaml
@@ -1,9 +1,9 @@
-﻿<UserControl x:Class="PatientRecordsModule.Views.VisitCloseView"
+﻿<UserControl x:Class="Shared.PatientRecords.Views.VisitCloseView"
              xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
              xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
              xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006" 
              xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
-             xmlns:viewModels="clr-namespace:PatientRecordsModule.ViewModels"
+             xmlns:viewModels="clr-namespace:Shared.PatientRecords.ViewModels"
              xmlns:editors="http://wpfcontrols.com/"
              xmlns:extToolkit="http://schemas.xceed.com/wpf/xaml/toolkit"
              mc:Ignorable="d" 
