--- a/PatientRecordsModule/Views/VisitEditorView.xaml
+++ b/PatientRecordsModule/Views/VisitEditorView.xaml
@@ -1,13 +1,12 @@
-﻿<UserControl x:Class="PatientRecordsModule.Views.VisitEditorView"
+﻿<UserControl x:Class="Shared.PatientRecords.Views.VisitEditorView"
              xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
              xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
              xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006" 
              xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
-             xmlns:viewModels="clr-namespace:PatientRecordsModule.ViewModels"
+             xmlns:viewModels="clr-namespace:Shared.PatientRecords.ViewModels"
              xmlns:extToolkit="http://schemas.xceed.com/wpf/xaml/toolkit"
              mc:Ignorable="d" 
-             d:DesignHeight="300" d:DesignWidth="300"
-             d:DataContext="{d:DesignInstance viewModels:VisitEditorViewModel}">
+             d:DesignHeight="300" d:DesignWidth="300">
     <UserControl.Resources>
         <ResourceDictionary>
             <ResourceDictionary.MergedDictionaries>
