--- a/PatientRecordsModule/Views/RecordTypesProtocols/DefaultProtocolView.xaml
+++ b/PatientRecordsModule/Views/RecordTypesProtocols/DefaultProtocolView.xaml
@@ -11,7 +11,7 @@
     <DataTemplate DataType="{x:Type viewModels:DefaultProtocolViewModel}">
         <Grid>
             <!--Grid for edit protocol-->
-            <GroupBox Header="Протокол" Margin="2,20,2,2" BorderBrush="Black" BorderThickness="1"
+            <GroupBox Header="Протокол" BorderBrush="Black" BorderThickness="1"
                       Visibility="{Binding IsEditMode, Converter={x:Static converters:BoolToVisibilityConverter.Instance}}">        
                 <Grid>
                     <Grid.ColumnDefinitions>
@@ -34,7 +34,7 @@
                 </Grid>
             </GroupBox>
         <!--Grid for view protocol-->
-            <Grid Visibility="{Binding IsViewMode, Converter={x:Static converters:BoolToVisibilityConverter.Instance}}">
+            <Grid Margin="0,10,0,0" Visibility="{Binding IsViewMode, Converter={x:Static converters:BoolToVisibilityConverter.Instance}}">
                 <Grid.ColumnDefinitions>
                     <ColumnDefinition Width="auto"/>
                     <ColumnDefinition Width="*"/>
