#97 - Work on patient photo move to New UI is almost done. Some minor fixes remain

--- a/PatientInfoModule/Views/Info/PatientInfoView.xaml
+++ b/PatientInfoModule/Views/Info/PatientInfoView.xaml
@@ -71,7 +71,7 @@
                     <Button Command="{Binding TakePhotoCommand}"
                             IsTabStop="False">
                         <StackPanel VerticalAlignment="Stretch">
-                            <Image Source="{Binding PhotoUri}"
+                            <Image Source="{Binding PhotoSource}"
                                    VerticalAlignment="Stretch"
                                    HorizontalAlignment="Center" />
                             <TextBlock VerticalAlignment="Bottom"
