--- a/PatientInfoModule/Views/Info/InfoHeaderView.xaml
+++ b/PatientInfoModule/Views/Info/InfoHeaderView.xaml
@@ -62,11 +62,12 @@
                                 HorizontalAlignment="Center"
                                 Background="Transparent">
                             <Grid>
-                                <Image Width="32"
-                                       Height="32">
+                                <Image Height="32"
+                                       Stretch="Fill"
+                                       StretchDirection="Both">
                                     <Image.Source>
                                         <MultiBinding Converter="{StaticResource GenderToPhotoUriConverter}">
-                                            <Binding Path="PhotoUri" />
+                                            <Binding Path="PhotoSource" />
                                             <Binding Path="IsMale" />
                                         </MultiBinding>
                                     </Image.Source>
