--- a/PatientSearchModule/Views/FoundPatientView.xaml
+++ b/PatientSearchModule/Views/FoundPatientView.xaml
@@ -1,24 +1,26 @@
 ﻿<ResourceDictionary xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
                     xmlns:viewModels="clr-namespace:PatientSearchModule.ViewModels"
                     xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-                    xmlns:converters="clr-namespace:Core.Wpf.Converters;assembly=Core.Wpf"
+                    xmlns:coreConverters="clr-namespace:Core.Wpf.Converters;assembly=Core.Wpf"
                     xmlns:misc="clr-namespace:Core.Wpf.Misc;assembly=Core.Wpf"
                     xmlns:coreMisc="clr-namespace:Core.Misc;assembly=Core"
                     xmlns:i="http://schemas.microsoft.com/expression/2010/interactivity"
-                    xmlns:behaviors="clr-namespace:Core.Wpf.Behaviors;assembly=Core.Wpf">
+                    xmlns:behaviors="clr-namespace:Core.Wpf.Behaviors;assembly=Core.Wpf"
+                    xmlns:converters="clr-namespace:PatientSearchModule.Converters">
     <DataTemplate DataType="{x:Type viewModels:FoundPatientViewModel}">
         <DataTemplate.Resources>
             <ResourceDictionary>
                 <ResourceDictionary.MergedDictionaries>
                     <ResourceDictionary Source="pack://application:,,,/Core.Wpf;Component/Themes/Generic.xaml" />
                 </ResourceDictionary.MergedDictionaries>
-                <converters:Converter x:Key="GenderToTextConverter">
-                    <converters:ConverterItem From="{x:Static misc:StaticBoolean.True}"
+                <coreConverters:Converter x:Key="GenderToTextConverter">
+                    <coreConverters:ConverterItem From="{x:Static misc:StaticBoolean.True}"
                                           To="родился" />
-                    <converters:ConverterItem From="{x:Static misc:StaticBoolean.False}"
+                    <coreConverters:ConverterItem From="{x:Static misc:StaticBoolean.False}"
                                           To="родилась" />
-                </converters:Converter>
+                </coreConverters:Converter>
                 <SolidColorBrush x:Key="ExplanationTextColor" Color="Gray" />
+                <converters:PatientGenderToImageSourceConverter x:Key="genderToImageSourceConverter" />
             </ResourceDictionary>
         </DataTemplate.Resources>
         <Border BorderBrush="DimGray"
@@ -43,7 +45,14 @@
                         Margin="5">
                     <Image Width="72"
                            Height="72"
-                           Source="{Binding IsMale, Converter={x:Static converters:GenderToImageConverter.Instance}}"/>
+                           Stretch="Fill">
+                        <Image.Source>
+                            <MultiBinding Converter="{StaticResource genderToImageSourceConverter}">
+                                <Binding Path="Photo" />
+                                <Binding Path="IsMale" />
+                            </MultiBinding>
+                        </Image.Source>
+                    </Image>
                 </Border>
                 <StackPanel Grid.Row="0"
                             Grid.Column="1"
